@@ -5,6 +5,11 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with
 email address.
 
+2008-Mar-30 UPDATE  Jonas Diemer <diemer-at-gmx.de>
+================================================================================
++eeschema
+    EESchema displays a warning now on a file format mismatch.
+
 2008-Mar-31 UPDATE   Dick Hollenbeck <dick@softplc.com>
 ================================================================================
 +all
